# sopel-unicode

./: Makefile  NEWS  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: pypi.yml  testpypi.yml
sopel_unicode/: __init__.py  impl.py  plugin.py
tools/: config_attrdoc_helper.py
