[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# TODO: what is the equivalent of this if we switch to hatchling?
#[tool.setuptools.dynamic]
#readme = { file=["README.rst", "NEWS"], content-type="text/x-rst" }

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "sopel_unicode/README.md"
"NEWS" = "sopel_unicode/NEWS"

[project]
name = "sopel-unicode"
version = "1.0.0"
description = "Unicode information lookup plugin for Sopel"

authors = [
  { name="SnoopJ" },
]

license = "EFL-2.0"
license-files = ["COPYING"]
dynamic = ["readme"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
#  "sopel>=8.0",
]
[project.optional-dependencies]
UCD = ["unicodedata2"]
age = ["unicode_age"]
all = [
    "sopel-unicode[UCD]",
    "sopel-unicode[age]",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-unicode"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-unicode/issues"

[project.entry-points."sopel.plugins"]
"sopel-unicode" = "sopel_unicode.plugin"
