[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sopel_unicode", "sopel_unicode.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-unicode"
version = "1.0.0"
description = "Unicode information lookup plugin for Sopel"

authors = [
  { name="SnoopJ" },
]

license = "EFL-2.0"
license-files = ["COPYING"]
dynamic = ["readme"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
  "sopel>=8.0",
]

[project.optional-dependencies]
UCD = ["unicodedata2"]
age = ["unicode_age"]
all = [
  "sopel-unicode[UCD]",
  "sopel-unicode[age]",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-unicode"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-unicode/issues"

[project.entry-points."sopel.plugins"]
"sopel-unicode" = "sopel_unicode.plugin"
